clean up .env.example

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@
 NODE_ENV=development
 
 # MongoDB Connection
-MONGODB_URI=mongodb://admin:password@localhost:27017/social-post-generator?authSource=admin
+MONGODB_URI=mongodb://localhost:27017/social-post-generator?authSource=admin
 
 # OpenAI API
 OPENAI_API_KEY=sk-your-openai-api-key-here
